Bug 138131 - UI: List Box form: List entries option is enabled by default (gen)
Summary: UI: List Box form: List entries option is enabled by default (gen)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.4
Keywords: bibisected, bisected
Depends on:
Blocks:
 
Reported: 2020-11-11 10:53 UTC by Xisco Faulí
Modified: 2020-11-16 09:54 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample (8.71 KB, application/vnd.oasis.opendocument.text)
2020-11-11 10:53 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-11-11 10:53:21 UTC
Created attachment 167191 [details]
sample

Steps to reproduce:
1. Open attached document with SAL_USE_VCLPLUGIN=gen
2. Form - Design Mode
3. Select the form - Control Properties

-> List entries option is enabled and it's possible to type inside it. The entry gets disabled after typing and clicking somewhere else. In GTK3, the entry is always disabled

Reproduced in

Version: 7.1.0.0.alpha1+
Build ID: 6dae6c6fdcf410cb0258e04ed018c82d70e8cc3e
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2020-11-11 10:58:54 UTC
The issue is happening since https://cgit.freedesktop.org/libreoffice/core/commit/?id=a0b6524fb369c11b5684b37f3328ef6efe5e07ba, which is just a revert of https://cgit.freedesktop.org/libreoffice/core/commit/?id=1d69cf32a73c0720882731ebf3eb5d2f07fce246

@Caolán, I thought you might be interested in this issue
Comment 2 Commit Notification 2020-11-12 08:49:35 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/590b4e75e3a3d4d415f71c17f2aa2aea2326daf9

tdf#138131 don't set enabled if container is already enabled

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2020-11-12 08:50:51 UTC
works for me in master, backport to 7-0 in gerrit
Comment 4 Commit Notification 2020-11-16 08:51:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/87ccf7f5395919ec4c5b7c4433c3f259eb10674d

tdf#138131 don't set enabled if container is already enabled

It will be available in 7.0.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2020-11-16 09:54:06 UTC
Verified in

Version: 7.1.0.0.alpha1+
Build ID: 548d77d0c06f7088dd3eb408797aa1fc1d7eb277
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!