tdf#138131 don't set enabled if container is already enabled

Change-Id: I46556c7242ad9b5c4c7a8fb923dc87458e56494e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/105538
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>